Cherry-pick d188f7e50205. rdar://problem/99197989

containing blocks with non visible overflow wrongly clip fixed positioned descendants
    https://bugs.webkit.org/show_bug.cgi?id=242673

    Reviewed by Simon Fraser.

    If an element is a containing block for fixed positioned descendants
    and is applied with non-visible overflow, it should clip the fixed
    position descendants. <https://commits.webkit.org/252387@main> fixed a
    similar issue of position:absolute. This change fixed position:fixed.

    This change contains another behavior change. Now, non none
    perspective and transform-style:preserve-3d create a containing block
    for fixed positioned descendants. Removed old test cases and added a
    test case for the new behavior.

    * LayoutTests/fast/overflow/containing-block-and-overflow-hidden-expected.html:
    * LayoutTests/fast/overflow/containing-block-and-overflow-hidden.html:
    * LayoutTests/imported/w3c/web-platform-tests/css/css-transforms/3d-rendering-context-behavior-expected.txt:
    Rebaselined. position:fixed behaves samely with position:absolute in this test.
    * LayoutTests/platform/mac-wk1/TestExpectations:
    * LayoutTests/transforms/2d/perspective-not-fixed-container-expected.html: Removed.
    * LayoutTests/transforms/2d/perspective-not-fixed-container.html: Removed.
    * LayoutTests/transforms/2d/preserve3d-not-fixed-container-expected.html: Removed.
    * LayoutTests/transforms/2d/preserve3d-not-fixed-container.html: Removed.
    * LayoutTests/transforms/containing-block-for-fixed-expected.html: Added.
    * LayoutTests/transforms/containing-block-for-fixed.html: Added.
    * Source/WebCore/rendering/RenderElement.h:
    (WebCore::RenderElement::canContainFixedPositionObjects const):
    * Source/WebCore/rendering/RenderLayer.cpp:
    (WebCore::RenderLayer::calculateClipRects const):

    Canonical link: https://commits.webkit.org/252721@main

Canonical link: https://commits.webkit.org/252432.293@safari-7614-branch